# aidriverswarm

./: .gitignore  README.md  pyproject.toml
modules/auto_agi_classes/: auto_agi.py  function_definitions.py  functions.py  message_manager.py  user_input_manager.py
requirements/: requirements.in
